--- a/wishlist/config.yaml
+++ b/wishlist/config.yaml
@@ -12,7 +12,7 @@ endpoints:
   - name: Basalt
     address: 192.168.1.59:22
     description: "Media Server"
-    user: debian
+    user: ozeliurs
     forward_agent: true
 
   - name: Chalk
