--- a/wishlist/config.yaml
+++ b/wishlist/config.yaml
@@ -27,6 +27,50 @@ endpoints:
     user: debian
     forward_agent: true
 
+  - name: Node Apoorva 2
+    address: 192.168.1.169:22
+    description: "Kubernetes Node"
+    user: user
+    forward_agent: true
+
+  - name: Node Apoorva 3
+    address: 192.168.1.167:22
+    description: "Kubernetes Node"
+    user: ubuntu
+    forward_agent: true
+
+  - name: Node Nino 4
+    address: 192.168.1.66:22
+    description: "Kubernetes Node"
+    user: ubuntu
+    forward_agent: true
+
+  - name: Axel VM
+    address: 192.168.1.31:22
+    description: "Virtual Machine for Development for Axel"
+    user: ubuntu
+    forward_agent: true
+
+  - name: Yvann VM
+    address: 192.168.1.193:22
+    description: "Virtual Machine for Development for Yvann"
+    user: debian
+    forward_agent: true
+
+  - name: Melanie SDN VM
+    address: 192.168.1.68:22
+    description: "Virtual Machine for SDN for Melanie"
+    user: debian
+    forward_agent: true
+
+  - name: Maxime SDN VM
+    address: 192.168.1.127:22
+    description: "Virtual Machine for SDN for Maxime"
+    user: debian
+    forward_agent: true
+
+
+
 
 # Users to allow access to the list
 users:
