--- a/wishlist/config.yaml
+++ b/wishlist/config.yaml
@@ -33,6 +33,12 @@ endpoints:
     user: debian
     forward_agent: true
 
+  - name: Reverse Proxy
+    address: 192.168.1.201:22
+    description: "Reverse Proxy Server"
+    user: debian
+    forward_agent: true
+
   - name: Node Apoorva 2
     address: 192.168.1.169:22
     description: "Kubernetes Node"
