--- a/wishlist/config.yaml
+++ b/wishlist/config.yaml
@@ -33,6 +33,12 @@ endpoints:
     user: ubuntu
     forward_agent: true
 
+  - name: Peridotite
+    address: 192.168.1.97:22
+    description: "Git Server"
+    user: debian
+    forward_agent: true
+
   - name: Tuff
     address: 192.168.1.181:22
     description: "Radicle Seed Node"
