--- a/wishlist/config.yaml
+++ b/wishlist/config.yaml
@@ -33,9 +33,9 @@ endpoints:
     user: ubuntu
     forward_agent: true
 
-  - name: Peridotite
-    address: 192.168.1.97:22
-    description: "Git Server"
+  - name: Temp
+    address: 192.168.1.145:22
+    description: "Temp Server"
     user: debian
     forward_agent: true
 
